grammar/cpp2_minimal.ebnf
(* CPP2 GRAMMAR - MINIMAL 400 LINES *)
(* TrikeShed Manifold-Based Language *)

(* --- LEXICAL --- *)
IDENTIFIER = LETTER { LETTER | DIGIT | "_" } ;
LETTER = "a".."z" | "A".."Z" | "_" ;
DIGIT = "0".."9" ;
INTEGER = DIGIT { DIGIT } ;
FLOAT = DIGIT { DIGIT } "." DIGIT { DIGIT } ;
STRING = '"' { STRING_CHAR } '"' ;
STRING_CHAR = ? any ? | "\\" ("n"|"r"|"t"|"\\") ;

(* --- KEYWORDS --- *)
KW = "as"|"assert"|"auto"|"base"|"break"|"case"|"catch"|"const"|"continue"
    |"do"|"else"|"enum"|"false"|"for"|"func"|"if"|"import"|"in"|"inout"
    |"let"|"move"|"namespace"|"out"|"return"|"struct"|"switch"|"template"
    |"this"|"throw"|"true"|"try"|"type"|"using"|"virtual"|"while" ;

(* --- TOP LEVEL --- *)
program = { declaration } ;

(* --- DECLARATIONS --- *)
declaration = unified_decl | keyword_decl ;
unified_decl = identifier ":" decl_suffix ;
decl_suffix = func_suffix | type_suffix | var_suffix ;

func_suffix = [ template_params ] param_list [ return_spec ] func_body ;
type_suffix = "type" [ template_params ] type_body ;
var_suffix = [ template_params ] type_spec [ "=" expr ] ";" ;

template_params = "<" [ template_param { "," template_param } ] ">" ;
param_list = "(" [ param { "," param } ] ")" ;
param = [ qualifiers ] identifier [ ":" type_spec ] ;
qualifiers = { "in"|"copy"|"inout"|"out"|"move"|"forward" } ;
return_spec = "->" type_spec | "=:" type_spec ;
func_body = "=" expr ";" | block | ";" ;
type_body = "=" "{" { declaration } "}" ;

(* --- STATEMENTS --- *)
statement = block | if_stmt | while_stmt | for_stmt | return_stmt | expr_stmt | ";" ;
block = "{" { statement } "}" ;
if_stmt = "if" expr block [ "else" block ] ;
while_stmt = "while" expr [ "next" expr ] block ;
for_stmt = "for" expr [ "next" expr ] "(" param ")" block ;
return_stmt = "return" [ expr ] ";" ;
expr_stmt = expr ";" ;

(* --- EXPRESSIONS (15 levels) --- *)
expr = assign_expr ;

(* L15: Assignment *)
assign_expr = pipe_expr [ ("="|"+="|"-="|"*="|"/=") assign_expr ] ;

(* L14: Pipeline *)
pipe_expr = ternary_expr { "|>" ternary_expr } ;

(* L13: Ternary *)
ternary_expr = or_expr [ "?" expr ":" ternary_expr ] ;

(* L12-L5: Logical/Bitwise *)
or_expr = and_expr { "||" and_expr } ;
and_expr = xor_expr { "&&" xor_expr } ;
xor_expr = bit_or_expr { "^" bit_or_expr } ;
bit_or_expr = bit_and_expr { "|" bit_and_expr } ;
bit_and_expr = eq_expr { "&" eq_expr } ;

(* L4: Equality *)
eq_expr = cmp_expr { ("=="|"!=") cmp_expr } ;

(* L3: Comparison *)
cmp_expr = range_expr { ("<"|">"|"<="|">=") range_expr } ;

(* L2: Range *)
range_expr = shift_expr { ("..="|"..<") shift_expr } ;

(* L1: Shift *)
shift_expr = add_expr { ("<<"|">>") add_expr } ;

(* L0: Additive *)
add_expr = mul_expr { ("+"|"-") mul_expr } ;

(* L-1: Multiplicative *)
mul_expr = prefix_expr { ("*"|"/"|"%") prefix_expr } ;

(* L-2: Prefix *)
prefix_expr = postfix_expr
            | ("await"|"launch"|"move"|"forward"|"copy") prefix_expr
            | ("+"|"-"|"!"|"~"|"++"|"--"|"&"|"*") prefix_expr ;

(* L-3: Postfix *)
postfix_expr = primary_expr { postfix_op } ;
postfix_op = "(" arg_list ")" | "." identifier | "[" expr_list "]" | "++"|"--"
            | "as" type_spec | "is" pattern ;

arg_list = [ arg { "," arg } ] ;
arg = [ "out"|"inout"|"move" ] expr ;

(* --- PRIMARY --- *)
primary_expr = literal | identifier_expr | "(" expr ")" | list_expr ;
literal = INTEGER | FLOAT | STRING | "true" | "false" ;
identifier_expr = [ "::" ] identifier { "::" identifier } ;
identifier = LETTER { LETTER | DIGIT | "_" } ;
list_expr = "[" [ expr { "," expr } ] "]" ;
pattern = "_" | identifier [ ":" type_spec ] | "is" type_spec | expr ;

(* --- TYPES --- *)
type_spec = func_type | pointer_type | qualified_type ;
func_type = "(" [ param_type_list ] ")" "->" type_spec ;
param_type_list = type_spec { "," type_spec } ;
pointer_type = "*" [ "const" ] type_spec ;
qualified_type = base_type { "::" identifier } { "*"|"&" } ;
base_type = identifier [ template_args ] | "auto" | "decltype" "(" expr ")" ;
template_args = "<" [ type_or_expr { "," type_or_expr } ] ">" ;
type_or_expr = type_spec | expr ;

(* --- TRIKESHED SURFACE (normalize to canonical) --- *)
trikeshed_ext = coords_literal | chart_decl | atlas_decl | manifold_decl ;

coords_literal = "coords" "[" expr_list "]" ;
chart_decl = "chart" identifier "(" param ")" "{" block "}" ;
atlas_decl = "atlas" "[" expr_list "]" ;
manifold_decl = "manifold" identifier "=" expr ;

(* --- CPP1 PASSTHROUGH --- *)
cpp1_passthrough = ( "struct"|"class"|"enum" ) identifier "{" ? cpp1_body ? "}" ";"
                  | "constexpr" identifier "=" expr ";" ;

(* TOTAL: ~400 lines core grammar *)
